# gcp-document-ai

./: .env-example  .gitignore  doc_ai_ocr.py  docai_split_and_run.py  main.py  preprocess_pdf.py  pyproject.toml  requirements.txt
